--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
+    <script src="https://kit.fontawesome.com/4832ebc8e1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,6 +20,13 @@
     <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo nesciunt minus numquam, odio, repudiandae
         perferendis quasi doloremque recusandae laboriosam amet et autem, obcaecati quia! Quia sapiente et libero
         dolorem ut.</div>
+    <i class="fa-brands fa-telegram"></i>
+    <i class="fa-brands fa-github"></i>
+    <i class="fa-solid fa-envelope"></i>
+    </br>
+    <i class="fa-brands fa-telegram"></i>
+    <i class="fa-brands fa-github"></i>
+    <i class="fa-regular fa-envelope"></i>
 </body>
 
 </html>
