--- a/index.html
+++ b/index.html
@@ -10,23 +10,72 @@
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Wix+Madefor+Display&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/4832ebc8e1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <h1>SEA of CODE</h1>
-    <div>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo nesciunt minus numquam, odio, repudiandae
-        perferendis quasi doloremque recusandae laboriosam amet et autem, obcaecati quia! Quia sapiente et libero
-        dolorem ut.</div>
-    <i class="fa-brands fa-telegram"></i>
-    <i class="fa-brands fa-github"></i>
-    <i class="fa-solid fa-envelope"></i>
-    </br>
-    <i class="fa-brands fa-telegram"></i>
-    <i class="fa-brands fa-github"></i>
-    <i class="fa-regular fa-envelope"></i>
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+            <img src="images/logo-dark.jpg" class="navbar-brand logo" alt="logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="index.html" title="Homepage">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html" title="About me">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" title="Contact">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="wrap">
+        <div class="container container-box">
+            <div class="row">
+                <div class="col">
+                    <h2 id="first-name">DARIA</h2>
+                    <h2>Romaniuk</h2>
+                    <h3>Junior Front-end Developer based in Europe</h3>
+                </div>
+                <div class="col">
+                    <div class="btn-box btn border">
+                        <a href="about.html">About me</a>
+                    </div>
+                    </br>
+                    <div class="btn-box btn border">
+                        <a href="projects.html">Projects</a>
+                    </div>
+                    </br>
+                    <div class="btn-box btn border">
+                        <a href="*">Contact me</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact-icons">
+        <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
+        <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
+                class="fa-brands fa-github"></i></a>
+        <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+    </div>
 </body>
 
 </html>
