--- a/projects.html
+++ b/projects.html
@@ -5,11 +5,77 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects - SEA of CODE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Wix+Madefor+Display&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="src/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4832ebc8e1.js" crossorigin="anonymous"></script>
+    <script src="src/script.js"></script>
 </head>
 
 <body>
-    Projects
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+            <img src="images/logo-dark.jpg" class="navbar-brand logo" alt="logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html" title="Homepage">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html" title="About me">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" title="Contact">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="wrap-project">
+        <div class="container container-project">
+            <div class="row">
+                <div class="col-6 m-auto">
+                    <span id="big-photo"></span>
+                    <img onclick="open_photo('images/weather-app.png')" src="images/weather-app.png" alt="Weather-app"
+                        title="Weather-app" class="project-img photo">
+                </div>
+                <div class="col-6 m-auto">
+                    <h4>Weather app</h4>
+                    <div> HTML, CSS, JavaScript, API, Bootstrap</div>
+                    <p>
+                        The Weather App is a responsive project built with HTML, CSS, and JavaScript. Leveraging an API,
+                        it delivers real-time weather data for any location. The app's interface, powered by Bootstrap,
+                        ensures a seamless experience across devices. </p>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="contact-icons">
+        <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
+        <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
+                class="fa-brands fa-github"></i></a>
+        <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+    </div>
 </body>
 
 </html>
