--- a/projects.html
+++ b/projects.html
@@ -50,7 +50,7 @@
 
     <div class="wrap-project">
         <div class="container container-project">
-            <div class="row">
+            <div class="row project-box">
                 <div class="col-6 m-auto">
                     <span id="big-photo"></span>
                     <img onclick="open_photo('images/weather-app.png')" src="images/weather-app.png" alt="Weather-app"
@@ -63,6 +63,22 @@
                         The Weather App is a responsive project built with HTML, CSS, and JavaScript. Leveraging an API,
                         it delivers real-time weather data for any location. The app's interface, powered by Bootstrap,
                         ensures a seamless experience across devices. </p>
+                </div>
+            </div>
+            <div class="row project-box">
+                <div class="col-6 m-auto">
+                    <h4>Landing page</h4>
+                    <div> HTML, CSS</div>
+                    <p>
+                        This simple landing page exemplifies expertise in HTML and CSS, showcasing a minimalist design
+                        and clean code. The well-structured layout achieved through HTML and the visual enhancements
+                        added by CSS contribute to an appealing and user-friendly interface. </p>
+
+                </div>
+                <div class="col-6 m-auto">
+                    <span id="big-photo"></span>
+                    <img onclick="open_photo('images/landing.png')" src="images/landing.png" alt="Landing page"
+                        title="Landing page" class="project-img photo">
                 </div>
             </div>
 
