Filled about and project page

--- a/about.html
+++ b/about.html
@@ -5,11 +5,162 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>About me - SEA of CODE</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Wix+Madefor+Display&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="src/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4832ebc8e1.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    About
+
+    <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
+        <div class="container-fluid">
+            <img src="images/logo-dark.jpg" class="navbar-brand logo" alt="logo">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html" title="Homepage">Home</a>
+                    </li>
+
+                    <li class="nav-item">
+                        <a class="nav-link  active" href="about.html" title="About me">About me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" title="Contact">Contact me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="body">
+        <h3 class="text-center mt-5 fs-3 matte">Hi there!I'm Daria 👩‍💻</h3>
+
+        <div class="container-fluid container-project">
+            <div class="row">
+                <div class="col-sm-5">
+                    <img src="images/about-me.jpg" alt="About me" title="About me" class="about m-auto">
+                </div>
+                <div class="col-sm-6 m-auto p-2">
+                    <p>I'm a passionate front-end developer dedicated to creating visually appealing
+                        and
+                        user-friendly websites. I love turning innovative ideas into practical solutions that enhance
+                        the digital experience.
+                        </br></br>
+                        With a solid foundation in HTML, CSS, and JavaScript, I enjoy creating seamless user
+                        experiences. I value feedback and continually seek ways to improve my skills.
+                        </br></br>
+                        I'm committed to user-centric design, creating responsive and accessible web applications for
+                        all users. I'm eager to learn more to streamline workflows and enhance productivity.</p>
+                    </br>
+
+                    <a href="projects.html" class="btn-box btn border d-block m-auto">See my projects</a>
+
+                </div>
+            </div>
+        </div>
+        <h3 class="text-center mt-5 fs-4 matte">My Certifications</h3>
+        <div class="container-fluid container-project">
+            <div class="row">
+                <div class="col-sm-5 m-auto">
+                    <h3 class="fs-4 text-end">Web Development Fundamentals</h3>
+                    <h3 class="text-end">IBM SkillsBuild</h3>
+                    <ul>
+                        <li>Basic computer functions, programming languages, and website development steps.
+                        </li>
+                        <li>HTML, CSS, and JavaScript features and interactions.
+                        </li>
+                        <li>Software development lifecycle phases and agile/waterfall approaches.
+                        </li>
+                        <li>Common HTML elements, coding techniques, CSS box model, and IDE features.
+                        </li>
+                        <li>JavaScript basics, dynamic websites, and MySQL database functions.
+                        </li>
+                        <li>Website testing, automation, version control, publishing, DevOps, responsive design, cloud
+                            computing.
+                        </li>
+                        <li>Building interactive web pages with HTML, CSS, and JavaScript, and functional testing.
+                        </li>
+                        <li>Web development job market, responsibilities, skills, and learning resources.</li>
+                    </ul>
+                    <a href="https://www.credly.com/badges/f7287345-5263-402e-bc5f-473e1363c954/linked_in_profile"
+                        target="_blank" class="btn-box btn border d-block m-auto">Show credential</a>
+                </div>
+                <div class="col-sm-5 d-block m-auto">
+                    <img src="images/ibm.png" alt="IBM SkillsBuild" title="IBM SkillsBuild" class="certification ">
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid container-project">
+            <div class="row">
+                <div class="col-sm-5 d-block m-auto">
+                    <img src="images/shecodes-basic.png" alt="SheCodes" title="SheCodes Basic" class="certification ">
+                </div>
+                <div class="col-sm-5 m-auto">
+                    <h3 class="fs-4">Introduction to Coding</h3>
+                    <h3>SheCodes</h3>
+                    <ul>
+                        <li>HTML: Basics of creating HTML pages.
+                        </li>
+                        <li>CSS: Styling HTML pages and targeting design elements.
+                        </li>
+                        <li>JavaScript: Working principles and animating code elements.
+                        </li>
+                        <li>Popular coding technologies: Familiarity with Visual Studio Code.</li>
+                    </ul>
+                    <a href="https://www.shecodes.io/certificates/cd024fef1758ef2b3984983feee3afef" target="_blank"
+                        class="btn-box btn border d-block m-auto">Show credential</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="container-fluid container-project">
+            <div class="row">
+                <div class="col-sm-5 m-auto">
+                    <h3 class="fs-4 text-end">Web Development</h3>
+                    <h3 class="text-end">SheCodes</h3>
+                    <ul>
+                        <li>Advanced HTML, CSS, and responsive design: Mastery of HTML, CSS, and Bootstrap for advanced
+                            front-end development.
+                        </li>
+                        <li>Advanced JavaScript (ES6): Proficiency in advanced JavaScript techniques for building
+                            interactive applications.
+                        </li>
+                        <li>APIs: Integration of live APIs to create real applications for demonstration to potential
+                            employers.
+                        </li>
+                        <li>Tools: Utilization of Git and GitHub for professional code management and streamlined
+                            development workflow.</li>
+                    </ul>
+                    <a href="https://www.shecodes.io/certificates/3ef83b2276be298a372ae3286aaeb9f8" target="_blank"
+                        class="btn-box btn border d-block m-auto">Show credential</a>
+                </div>
+                <div class="col-sm-5 d-block m-auto">
+                    <img src="images/shecodes-plus.png" alt="SheCodes" title="SheCodes Plus" class="certification ">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="contact-icons m-4 fixed-bottom">
+        <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
+        <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
+                class="fa-brands fa-github"></i></a>
+        <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+    </div>
 </body>
 
 </html>
