--- a/index.html
+++ b/index.html
@@ -46,31 +46,27 @@
             </div>
         </div>
     </nav>
-    <div class="wrap">
-        <div class="container container-box">
-            <div class="row">
-                <div class="col">
-                    <h2 id="first-name">DARIA</h2>
-                    <h2>Romaniuk</h2>
-                    <h3>Junior Front-end Developer based in Europe</h3>
-                </div>
-                <div class="col">
-                    <div class="btn-box btn border">
-                        <a href="about.html">About me</a>
+    <div class="body">
+        <div class="wrap">
+            <div class="container container-box">
+                <div class="row">
+                    <div class="col text-end">
+                        <h2 id="first-name">DARIA</h2>
+                        <h2>Romaniuk</h2>
+                        <h3>Front-end Developer based in Europe</h3>
                     </div>
-                    </br>
-                    <div class="btn-box btn border">
-                        <a href="projects.html">Projects</a>
-                    </div>
-                    </br>
-                    <div class="btn-box btn border">
-                        <a href="*">Contact me</a>
+                    <div class="col">
+                        <a href="about.html" class="btn-box btn border">About me</a>
+                        </br>
+                        <a href="projects.html" class="btn-box btn border">Projects</a>
+                        </br>
+                        <a href="*" class="btn-box btn border">Contact me</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="contact-icons">
+    <div class="contact-icons mb-4 fixed-bottom">
         <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
         <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
                 class="fa-brands fa-github"></i></a>
