added nav-links at the bottom

--- a/about.html
+++ b/about.html
@@ -156,10 +156,12 @@
         </div>
     </div>
     <div class="contact-icons m-4 fixed-bottom">
+        <a href="index.html" class="btn border me-lg-5">Home</a>
         <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
         <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
                 class="fa-brands fa-github"></i></a>
         <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+        <a href="projects.html" class="btn border ms-lg-5">Projects</a>
     </div>
 </body>
 
