--- a/projects.html
+++ b/projects.html
@@ -50,6 +50,7 @@
 
     <div class="body">
         <div class="container-fluid container-project">
+            <h3 class="text-center mt-5 fs-3 matte">My Projects</h3>
             <div class="row project-box">
                 <div class="col-sm-6 m-auto">
 
@@ -94,10 +95,12 @@
 
 
     <div class="contact-icons m-4 fixed-bottom">
+        <a href="index.html" class="btn border me-lg-5">Home</a>
         <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
         <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
                 class="fa-brands fa-github"></i></a>
         <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+        <a href="about.html" class="btn border ms-lg-5">About me</a>
     </div>
 </body>
 
