created contact-me page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Contact">Contact me</a>
+                        <a class="nav-link" href="contact.html" title="Contact">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -50,8 +50,8 @@
         <div class="wrap">
             <div class="container container-box">
                 <div class="row">
-                    <div class="col text-end">
-                        <h2 id="first-name">DARIA</h2>
+                    <div class="col text-end m-auto">
+                        <h2>DARIA</h2>
                         <h2>Romaniuk</h2>
                         <h3>Front-end Developer based in Europe</h3>
                     </div>
@@ -60,7 +60,7 @@
                         </br>
                         <a href="projects.html" class="btn-box btn border">Projects</a>
                         </br>
-                        <a href="*" class="btn-box btn border">Contact me</a>
+                        <a href="contact.html" class="btn-box btn border">Contact me</a>
                     </div>
                 </div>
             </div>
