--- a/about.html
+++ b/about.html
@@ -41,14 +41,14 @@
                         <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Contact">Contact me</a>
+                        <a class="nav-link" href="contact.html" title="Contact">Contact me</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
     <div class="body">
-        <h3 class="text-center mt-5 fs-3 matte">Hi there!I'm Daria 👩‍💻</h3>
+        <h3 class="text-center mt-5 fs-3 matte">Hi there! I'm Daria 👩‍💻</h3>
 
         <div class="container-fluid container-project">
             <div class="row">
