--- a/projects.html
+++ b/projects.html
@@ -41,7 +41,7 @@
                         <a class="nav-link active" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" title="Contact">Contact me</a>
+                        <a class="nav-link" href="contact.html" title="Contact">Contact me</a>
                     </li>
                 </ul>
             </div>
@@ -49,8 +49,8 @@
     </nav>
 
     <div class="body">
+        <h3 class="text-center mt-5 fs-3 matte">My Projects</h3>
         <div class="container-fluid container-project">
-            <h3 class="text-center mt-5 fs-3 matte">My Projects</h3>
             <div class="row project-box">
                 <div class="col-sm-6 m-auto">
 
