--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Daria is Front-End Developer based in Europe | HTML, CSS, JavaScript |
+      I'm an aspiring front-end developer eager to kick-start my career in web development.">
     <title>About me - SEA of CODE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -23,7 +25,8 @@
 
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <img src="images/logo-dark.jpg" class="navbar-brand logo" alt="logo">
+            <a href="index.html" title="Homepage"><img src="images/logo-dark.jpg" class="navbar-brand logo"
+                    alt="SEA of CODE logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +41,7 @@
                         <a class="nav-link  active" href="about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link" href="projects.html" title="Projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html" title="Contact">Contact me</a>
@@ -56,6 +59,13 @@
                     <img src="images/about-me.jpg" alt="About me" title="About me" class="about m-auto">
                 </div>
                 <div class="col-sm-6 m-auto p-2">
+                    <div class="technologies fs-2">
+                        <i class="fa-brands fa-html5" title="HTML"></i>
+                        <i class="fa-brands fa-css3-alt" title="CSS"></i>
+                        <i class="fa-brands fa-js" title="JavaScript"></i>
+                        <i class="fa-brands fa-github" title="GitHub"></i>
+                        <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+                    </div>
                     <p>I'm a passionate front-end developer dedicated to creating visually appealing
                         and
                         user-friendly websites. I love turning innovative ideas into practical solutions that enhance
@@ -68,12 +78,14 @@
                         all users. I'm eager to learn more to streamline workflows and enhance productivity.</p>
                     </br>
 
-                    <a href="projects.html" class="btn-box btn border d-block m-auto">See my projects</a>
+                    <a href="projects.html" class="btn-box btn border d-block m-auto" title="Project page">See my
+                        projects</a>
 
                 </div>
             </div>
         </div>
-        <h3 class="text-center mt-5 fs-4 matte">My Certifications</h3>
+
+        <h3 class="text-center mt-3 fs-4 matte">My Certifications</h3>
         <div class="container-fluid container-project">
             <div class="row">
                 <div class="col-sm-5 m-auto">
@@ -98,7 +110,7 @@
                         <li>Web development job market, responsibilities, skills, and learning resources.</li>
                     </ul>
                     <a href="https://www.credly.com/badges/f7287345-5263-402e-bc5f-473e1363c954/linked_in_profile"
-                        target="_blank" class="btn-box btn border d-block m-auto">Show credential</a>
+                        target="_blank" class="btn-box btn border d-block m-auto" title="Check">Show credential</a>
                 </div>
                 <div class="col-sm-5 d-block m-auto">
                     <img src="images/ibm.png" alt="IBM SkillsBuild" title="IBM SkillsBuild" class="certification ">
@@ -123,7 +135,7 @@
                         <li>Popular coding technologies: Familiarity with Visual Studio Code.</li>
                     </ul>
                     <a href="https://www.shecodes.io/certificates/cd024fef1758ef2b3984983feee3afef" target="_blank"
-                        class="btn-box btn border d-block m-auto">Show credential</a>
+                        class="btn-box btn border d-block m-auto" title="Check">Show credential</a>
                 </div>
             </div>
         </div>
@@ -147,21 +159,25 @@
                             development workflow.</li>
                     </ul>
                     <a href="https://www.shecodes.io/certificates/3ef83b2276be298a372ae3286aaeb9f8" target="_blank"
-                        class="btn-box btn border d-block m-auto">Show credential</a>
+                        class="btn-box btn border d-block m-auto" title="Check">Show credential</a>
                 </div>
                 <div class="col-sm-5 d-block m-auto">
                     <img src="images/shecodes-plus.png" alt="SheCodes" title="SheCodes Plus" class="certification ">
                 </div>
             </div>
         </div>
+        <p class="footnote pb-5 my-3 ">This project was built by Daria Romaniuk, and it is <a
+                href="https://github.com/daryavolnaya/portfolio-project" target="_blank" title="GitHub Project"
+                class="github-plus">
+                open-sourced</a></p>
     </div>
     <div class="contact-icons m-4 fixed-bottom">
-        <a href="index.html" class="btn border me-lg-5">Home</a>
+        <a href="index.html" class="btn border me-lg-5" title="Homepage">Home</a>
         <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
         <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
-                class="fa-brands fa-github"></i></a>
+                class="fa-brands fa-github github-plus"></i></a>
         <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
-        <a href="projects.html" class="btn border ms-lg-5">Projects</a>
+        <a href="projects.html" class="btn border ms-lg-5" title="Project page">Projects</a>
     </div>
 </body>
 
