--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Daria is Front-End Developer based in Europe | HTML, CSS, JavaScript |
+      I'm an aspiring front-end developer eager to kick-start my career in web development.">
     <title>Front-end Developer - SEA of CODE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -22,7 +24,8 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <img src="images/logo-dark.jpg" class="navbar-brand logo" alt="logo">
+            <a href="index.html" title="Homepage"><img src="images/logo-dark.jpg" class="navbar-brand logo"
+                    alt="SEA of CODE logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -37,7 +40,7 @@
                         <a class="nav-link" href="about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link" href="projects.html" title="Projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html" title="Contact">Contact me</a>
@@ -56,11 +59,11 @@
                         <h3>Front-end Developer based in Europe</h3>
                     </div>
                     <div class="col">
-                        <a href="about.html" class="btn-box btn border">About me</a>
+                        <a href="about.html" class="btn-box btn border" title="About me">About me</a>
                         </br>
-                        <a href="projects.html" class="btn-box btn border">Projects</a>
+                        <a href="projects.html" class="btn-box btn border" title="Projects">Projects</a>
                         </br>
-                        <a href="contact.html" class="btn-box btn border">Contact me</a>
+                        <a href="contact.html" class="btn-box btn border" title="Contacts">Contact me</a>
                     </div>
                 </div>
             </div>
@@ -69,7 +72,7 @@
     <div class="contact-icons mb-4 fixed-bottom">
         <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
         <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
-                class="fa-brands fa-github"></i></a>
+                class="fa-brands fa-github github-plus"></i></a>
         <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
     </div>
 </body>
