--- a/projects.html
+++ b/projects.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Daria is Front-End Developer based in Europe | HTML, CSS, JavaScript |
+      I'm an aspiring front-end developer eager to kick-start my career in web development.">
     <title>Projects - SEA of CODE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -23,7 +25,8 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
         <div class="container-fluid">
-            <img src="images/logo-dark.jpg" class="navbar-brand logo" alt="logo">
+            <a href="index.html" title="Homepage"><img src="images/logo-dark.jpg" class="navbar-brand logo"
+                    alt="SEA of CODE logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -38,7 +41,7 @@
                         <a class="nav-link" href="about.html" title="About me">About me</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="projects.html">Projects</a>
+                        <a class="nav-link active" href="projects.html" title="Projects">Projects</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html" title="Contact">Contact me</a>
@@ -49,6 +52,13 @@
     </nav>
 
     <div class="body">
+        <div class="technologies fs-2">
+            <i class="fa-brands fa-html5" title="HTML"></i>
+            <i class="fa-brands fa-css3-alt" title="CSS"></i>
+            <i class="fa-brands fa-js" title="JavaScript"></i>
+            <i class="fa-brands fa-github" title="GitHub"></i>
+            <i class="fa-brands fa-bootstrap" title="Bootstrap"></i>
+        </div>
         <h3 class="text-center mt-5 fs-3 matte">My Projects</h3>
         <div class="container-fluid container-project">
             <div class="row project-box">
@@ -66,7 +76,7 @@
                     </br>
 
                     <a href="https://prismatic-dango-48171b.netlify.app/" target="_blank"
-                        class="btn-box btn border d-block m-auto">Launch the app</a>
+                        class="btn-box btn border d-block m-auto" title="Launch">Launch the app</a>
 
                 </div>
 
@@ -82,7 +92,7 @@
                     </br>
 
                     <a href="https://www.shecodes.io/workshops/shecodes-basics-7a10a400-2ff5-4948-90c8-664c5c6a1cc3/projects/1563949"
-                        target="_blank" class="btn-box btn border d-block m-auto">Launch the page</a>
+                        target="_blank" class="btn-box btn border d-block m-auto" title="Launch">Launch the page</a>
 
                 </div>
                 <div class="col-sm-6 m-auto">
@@ -91,17 +101,22 @@
             </div>
 
         </div>
+        <p class="footnote pb-5 my-3 ">This project was built by Daria Romaniuk, and it is <a
+                href="https://github.com/daryavolnaya/portfolio-project" target="_blank" title="GitHub Project"
+                class="github-plus">
+                open-sourced</a></p>
     </div>
 
 
     <div class="contact-icons m-4 fixed-bottom">
-        <a href="index.html" class="btn border me-lg-5">Home</a>
+        <a href="about.html" class="btn border ms-lg-5" title="About me page">About me</a>
         <a href="https://t.me/darya_volnaya" target="_blank" title="Telegram"> <i class="fa-brands fa-telegram"></i></a>
         <a href="https://github.com/daryavolnaya" target="_blank" title="GitHub"> <i
-                class="fa-brands fa-github"></i></a>
+                class="fa-brands fa-github github-plus"></i></a>
         <a href="mailto: daryaromanyuk@gmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
-        <a href="about.html" class="btn border ms-lg-5">About me</a>
+        <a href="contact.html" class="btn border ms-lg-5" title="Contacts">Contacts</a>
     </div>
+
 </body>
 
 </html>
