--- a/about.html
+++ b/about.html
@@ -166,6 +166,32 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid container-project">
+            <div class="row">
+                <div class="col-sm-5 d-block m-auto">
+                    <img src="images/shecodes-responsive.png" alt="SheCodes" title="SheCodes Responsive"
+                        class="certification">
+                </div>
+                <div class="col-sm-5 m-auto">
+                    <h3 class="fs-4">Responsive Web Development</h3>
+                    <h3>SheCodes</h3>
+                    <ul>
+                        <li>Responsive design: Mastering responsive design principles for building an online portfolio.
+                        </li>
+                        <li>Advanced Bootstrap: Utilizing advanced Bootstrap features such as navigation, utility
+                            classes, and more.
+                        </li>
+                        <li>Flexbox: Understanding and implementing Flexbox layout techniques.
+                        </li>
+                        <li>Multiple page hosting: Learning how to host and manage multiple pages for a cohesive online
+                            portfolio.</li>
+
+                    </ul>
+                    <a href="https://www.shecodes.io/certificates/37ebe118789b2299ac867936d5f08382" target="_blank"
+                        class="btn-box btn border d-block m-auto" title="Check">Show credential</a>
+                </div>
+            </div>
+        </div>
         <p class="footnote pb-5 my-3 ">This project was built by Daria Romaniuk, and it is <a
                 href="https://github.com/daryavolnaya/portfolio-project" target="_blank" title="GitHub Project"
                 class="github-plus">
