--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&family=Wix+Madefor+Display&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="src/styles.css">
+    <style>
+        .container-box,
+        .contact-icons {
+            backdrop-filter: blur(9px);
+
+        }
+    </style>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
