updated AboutMe and Project pages

--- a/about.html
+++ b/about.html
@@ -192,6 +192,35 @@
                 </div>
             </div>
         </div>
+        <div class="container-fluid container-project">
+            <div class="row">
+                <div class="col-sm-5 m-auto">
+                    <h3 class="fs-4 text-end">React Development</h3>
+                    <h3 class="text-end">SheCodes</h3>
+                    <ul>
+                        <li>React basics: Learning the fundamental concepts of React. Gaining practical experience by
+                            working with React.
+                        </li>
+                        <li>HTML, CSS, and JavaScript: Continuing to strengthen skills in these core web development
+                            technologies.
+                        </li>
+                        <li>Visual Studio Code, Bootstrap: Utilizing an editor for coding React applications and
+                            Incorporating Bootstrap for
+                            responsive and visually appealing React components.
+                        </li>
+                        <li>API: Working with APIs to retrieve and manipulate data in React applications.</li>
+                        <li>GitHub, Hosting: Utilizing GitHub for version control and collaboration in React projects
+                            and understanding the process
+                            of hosting React applications.</li>
+                    </ul>
+                    <a href="https://www.shecodes.io/certificates/457e0279ca828452db4bd8d738168993" target="_blank"
+                        class="btn-box btn border d-block m-auto" title="Check">Show credential</a>
+                </div>
+                <div class="col-sm-5 d-block m-auto">
+                    <img src="images/shecodes-react.png" alt="SheCodes" title="SheCodes React" class="certification ">
+                </div>
+            </div>
+        </div>
         <p class="footnote pb-5 my-3 ">This project was built by Daria Romaniuk, and it is <a
                 href="https://github.com/daryavolnaya/portfolio-project" target="_blank" title="GitHub Project"
                 class="github-plus">
