--- a/projects.html
+++ b/projects.html
@@ -62,6 +62,30 @@
         <h3 class="text-center mt-5 fs-3 matte">My Projects</h3>
         <div class="container-fluid container-project">
             <div class="row project-box">
+
+                <div class="col-sm-6 m-auto">
+                    <h4>React Weather app</h4>
+                    <div class="skills">React, JSX, HTML, CSS, API, Bootstrap</div>
+                    <p>
+                        The React Weather App is a dynamic web application built with React, offering real-time weather
+                        information worldwide. With a modern UI powered by React components, it delivers accurate
+                        forecasts and essential weather details. Custom CSS styling and Bootstrap ensure a visually
+                        appealing and responsive interface. API integration enables seamless data retrieval. Showcase
+                        your proficiency in React, JavaScript, JSX, CSS, and API integration with this user-friendly
+                        app. </p>
+                    </br>
+
+                    <a href="https://courageous-kulfi-996a32.netlify.app/" target="_blank"
+                        class="btn-box btn border d-block m-auto" title="Launch">Launch the app</a>
+
+                </div>
+                <div class="col-sm-6 m-auto">
+
+                    <img src="images/weather-app.png" alt="React-weather-app" title="React-weather-app"
+                        class="project-img photo">
+                </div>
+            </div>
+            <div class="row project-box">
                 <div class="col-sm-6 m-auto">
 
                     <img src="images/weather-app.png" alt="Weather-app" title="Weather-app" class="project-img photo">
