added screenshoot of the react-app

--- a/projects.html
+++ b/projects.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-sm-6 m-auto">
 
-                    <img src="images/weather-app.png" alt="React-weather-app" title="React-weather-app"
+                    <img src="images/react-weather-app.png" alt="React-weather-app" title="React-weather-app"
                         class="project-img photo">
                 </div>
             </div>
